Update style.css to center align the fixed position element

--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@
   width: 800px;
   margin: 5em auto;
   position: fixed;
-  top: 10%;
-  left: 2%;
+  vertical-align: middle;
   display: flex;
+  justify-content: center;
   visibility: hidden;
 }
 
